--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -95,7 +95,7 @@
                                 <small *ngIf="sign_up_F['controls']['password'].errors['required']">Mật khẩu không được bỏ trống!</small>
                                 <small *ngIf="sign_up_F['controls']['password'].errors['minlength']">Mật khẩu phải chứa tối thiểu 8 kí tự!</small>
                                 <small *ngIf="sign_up_F['controls']['password'].errors['maxlength']">Mật khẩu chỉ chứa tối đa 20 kí tự!</small>
-                                <small *ngIf="sign_up_F['controls']['password'].errors['pattern']">Mật khẩu phải chứa chữ hoa, chữ thường và kí tự khác!</small>
+                                <small *ngIf="sign_up_F['controls']['password'].errors['pattern']">Mật khẩu phải chứa chữ hoa, chữ thường, số và kí tự khác!</small>
                             </div>
                         </div>
 
