--- a/src/app/features/personal_information/change-password/change-password.component.html
+++ b/src/app/features/personal_information/change-password/change-password.component.html
@@ -60,7 +60,7 @@
                                     <small *ngIf="changePassword_F['controls']['new_password'].errors['required']">Mật khẩu không được bỏ trống!</small>
                                     <small *ngIf="changePassword_F['controls']['new_password'].errors['minlength']">Mật khẩu phải chứa tối thiểu 8 kí tự!</small>
                                     <small *ngIf="changePassword_F['controls']['new_password'].errors['maxlength']">Mật khẩu chỉ chứa tối đa 20 kí tự!</small>
-                                    <small *ngIf="changePassword_F['controls']['new_password'].errors['pattern']">Mật khẩu phải chứa chữ hoa, chữ thường và kí tự khác!</small>
+                                    <small *ngIf="changePassword_F['controls']['new_password'].errors['pattern']">Mật khẩu phải chứa chữ hoa, chữ thường, số và kí tự khác!</small>
                                 </div>
                             </div>
                         </div>
