--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -46,11 +46,11 @@
                                 <small *ngIf="loginF['controls']['password'].errors['required']">Mật khẩu không được bỏ trống!</small>
                                 <small *ngIf="loginF['controls']['password'].errors['minlength']">Mật khẩu phải chứa tối thiểu 8 kí tự!</small>
                                 <small *ngIf="loginF['controls']['password'].errors['maxlength']">Mật khẩu chỉ chứa tối đa 20 kí tự!</small>
-                                <small *ngIf="loginF['controls']['password'].errors['pattern']">Mật khẩu phải chứa chữ hoa, chữ thường và kí tự khác!</small>
+                                <small *ngIf="loginF['controls']['password'].errors['pattern']">Mật khẩu phải chứa chữ hoa, chữ thường, số và kí tự khác!</small>
                             </div>
                         </div>
 
-                        <a class="forget-password d-block float-end" style="cursor: pointer;">Quên mật khẩu?</a>
+                        <!-- <a class="forget-password d-block float-end" style="cursor: pointer;">Quên mật khẩu?</a> -->
 
                         <button type="submit" class="btn btn-dark w-100 mt-5" [disabled]="loginF.invalid || isLoading">
                             <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status"
